* Manual page clarification for `--root` and `verify`. Thanks, Saint Germain.
* Remove outdated section from manual page explaining that there is not
  format conversion. Thanks, Elrond of Samba-TNG.
* Added missing information about specifying a user in sftp URLs. Thanks,
  Joey Hess, for pointing it out.
* Manual page clarification on `--keep` from Damien Couroussé.

Version 1.0, released 2012-06-01
--------------------------------

* Fixed bug in finding duplicate files during a backup generation.
  Thanks to Saint Germain for reporting the problem.
* Changed version number to 1.0.

Version 0.30, released 2012-05-30; a RELEASE CANDIDATE
------------------------------------------------------

Only bug fixes, and only in the test suite.

* Fix test case problem when `$TMPDIR` lacks `user_xattr`. The extended
  attributes test won't succeed in that case, and it's pointless to run it.
* Fix test case problem when `$TMPDIR` lacks nanosecond timestamps for
  files. The test case now ignores such timestamps, making the test pass
  anyway. The timestamp accuracy is not important for this test.

Version 0.29, released 2012-05-27; a RELEASE CANDIDATE
------------------------------------------------------

* "obnam backup" now writes performance statistics at the end of a backup run.
  Search the log for "Backup performance statistics" (INFO level).
* "obnam verify" now continues past the first error. Thanks to Rafał Gwiazda
  for requesting this.
* Add an `obnam-viewprof` utility to translate Python profiling output
  into human readable text form.
* Bug fix: If a file's extended attributes have changed in any way, the change
  is now backed up.
* "obnam fsck" is now a bit faster.
* The shared directories in the repository are now locked only during updates,
  allowing more efficient concurrent backups between several computers.
* Obnam now gives a better error message when a backup root is not a 
  directory. Thanks to Edward Allcutt for reporting the error